Fixed overflowing blog description

--- a/css/BlogStyle.css
+++ b/css/BlogStyle.css
@@ -109,6 +109,12 @@
     padding-right: 1rem;
 }
 
+.shortBlogDesc{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .blogDescription h3{
     display: inline-block;
     margin-top: 10px;
